Create base code
Using Microsoft api tutorial to create base project

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "BooksDatabaseSettings": {
+    "BooksCollectionName": "Books",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "LibraryDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
