Fix Database Error

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "BooksDatabaseSettings": {
+  "LibraryDatabaseSettings": {
     "BooksCollectionName": "Books",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "LibraryDb"
