--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "LibraryDatabaseSettings": {
     "BooksCollectionName": "Books",
+    "PublishersCollectionName": "Publishers",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "LibraryDb"
   },
